# chronojump

./: .gitignore  AUTHORS  Catalog.cs  INSTALL  MAINTAINERS  Makefile  Makefile.am  Makefile.include  Makefile.win32  README  README.md  README_svn  TODO.txt  autogen.sh  changelog.txt  chronojump-mini.cs  chronojump.bat  chronojump.cs  chronojump.csproj  chronojump.doap  chronojump.pot  chronojump.prg  chronojump.sln  chronojump.spec  chronojump_config.txt  chronojump_linux.sh  chronojump_mini.bat  chronojump_mini.csproj  chronojump_mini.prg  chronojump_mini.sln  chronojump_sample.db  chronojump_sqlite.dia  chronopic.cs  compile_po_files.sh  configure.ac  create_release.sh  create_release_linux_src.sh  create_release_windows.sh  deb-pkg.sh.in  execute_on_linux.txt  (+27 more)
CesarPlayer/: AssemblyInfo.cs.in  CesarPlayer.dll.config.in  Makefile.am  MultimediaFactory.cs  cesarplayer.key  cesarplayer.pc.in
CesarPlayer/Capturer/: CaptureProperties.cs  FakeCapturer.cs  GstCameraCapturer.cs  ICapturer.cs  LiveSourceTimer.cs  ObjectManager.cs
CesarPlayer/Common/: Constants.cs  Enum.cs  Handlers.cs
CesarPlayer/Editor/: EditorState.cs  GstVideoSplitter.cs  IVideoEditor.cs  IVideoSplitter.cs  VideoSegment.cs
CesarPlayer/Gui/: CapturerBin.cs  PlayerBin.cs  VolumeWindow.cs
CesarPlayer/Player/: GstDVDEvent.cs  GstPlayer.cs  IPlayer.cs  ObjectManager.cs
CesarPlayer/Utils/: Device.cs  FramesCapturer.cs  IFramesCapturer.cs  IMetadataReader.cs  MediaFile.cs  PreviewMediaFile.cs  TimeString.cs
CesarPlayer/gtk-gui/: LongoMatch.Gui.CapturerBin.cs  LongoMatch.Gui.PlayerBin.cs  LongoMatch.Gui.VolumeWindow.cs  gui.stetic  objects.xml
chronojump_server/: BCrypt.cs  ChronojumpServer.cs  Makefile.am  chronojumpServer.asmx  chronojumpServer.cs  chronojumpServerCSharp.cs  com_mono_server.txt  compile_wsdl.sh  crontab-root  howto_compile.txt  howto_server_2009.txt  howto_server_2013.txt  web.config
chronojump_server/r-sqlite/: chronojump_server_log.sh  evaluators.R  heights_by_jumps_boxplot.R  howto_r-sqlite_scripts.txt  ieiub.R  persons.R  r-sqlite_script_1.txt  tf_by_age.R  tf_by_extra_weight.R  tf_by_jumps_boxplot.R  tf_by_level_sex_jumptype.R  tv_by_level_sex_jumptype.R  update-r-graphs
chronopic-firmware/chronopic-firmwarecord/: Makefile.am  README  chronopic-firmware-automatic.hex  chronopic-firmwarecord.in  chronopic-firmwarecord.py  chronopic_firmware_10ms.hex  chronopic_firmware_50ms.hex  ledp.hex  setup.py
chronopic-tests/: Changelog  Makefile  Makefile.am  Makefile.old  README.txt  chronopic-serial-conf.c  chronopic.c  chronopic.cs  chronopic.h  termansi.c  termansi.h  test-precision.c  test-saltos.c  test-saltos.mono.cs  test-tramas.c  test.cs  test.prj
data/theme/: Makefile.am  index.theme
libcesarplayer/: Makefile.am  bacon-video-widget-gst-0.10.c  bacon-video-widget.h  baconvideowidget-marshal.c  baconvideowidget-marshal.h  baconvideowidget-marshal.list  common.h  gst-camera-capturer.c  gst-camera-capturer.h  gst-remuxer.c  gst-remuxer.h  gst-smart-video-scaler.c  gst-smart-video-scaler.h  gst-video-editor.c  gst-video-editor.h  gstscreenshot.c  macros.h  main.c  test-editor.c  test-remuxer.c  video-utils.c  video-utils.h
libcesarplayer/src/: Makefile.am  bacon-resize.c  bacon-resize.h  bacon-video-widget-gst-0.10.c  bacon-video-widget.h  baconvideowidget-marshal.c  common.h  gst-camera-capturer.c  gst-camera-capturer.h  gst-video-editor.c  gst-video-editor.h  gstscreenshot.c  gstscreenshot.h  gstvideowidget.c  gstvideowidget.h  main.c  video-utils.c  video-utils.h
nplot/nplot/: AdapterUtils.cs  ArrowItem.cs  AssemblyInfo.cs  AxesConstraint.cs  Axis.cs  BarPlot.cs  BasePlot.cs  BasePlot3D.cs  BaseSequenceLinePlot.cs  BaseSequencePlot.cs  Bitmap.PlotSurface2D.cs  BubblePlot.cs  CandlePlot.cs  DateTimeAxis.cs  ErrorHandler.cs  FilledRegion.cs  FontScaler.cs  Grid.cs  HistogramPlot.cs  HorizontalLine.cs  IDrawable.cs  IDrawable3D.cs  IGradient.cs  IMeshPlot.cs  IPlot.cs  IPlot3D.cs  IPlotSurface2D.cs  IPlotSurface2Dnew.cs  IPlotSurface3D.cs  ISequencePlot.cs  ISurface.cs  ITransform2D.cs  ImagePlot.cs  LabelAxis.cs  LabelPointPlot.cs  Legend.cs  LegendBase.cs  LinePlot.cs  LinearAxis.cs  LinearGradient.cs  (+37 more)
nplot/nplot-gtk/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile.am  POTFILES  POTFILES.in  POTFILES.skip  README  ar.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hu.po  id.po  intltool-update  it.po  ka.po  missing  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  (+1 more)
rdotnet/: Makefile  Makefile.am  Makefile.in
rdotnet/R.NET/: Makefile  Makefile.am  Makefile.in  REngine.cs
rdotnet/RDotNet.NativeLibrary/: Makefile  Makefile.am  Makefile.in  UnmanagedDll.cs
src/: .gitignore  AssemblyInfo.cs  AssemblyInfo.cs.in  Catalog.cs  Chronojump.csproj  Chronojump.sln  FTD2XX_NET.cs  Makefile.am  MyPixbuf.cs  NativeLibraryResolver.cs  RFID.cs  buildInfo.cs  buildInfo.cs.in  catalog.cs  chronoDebug.cs  chronojump-mini.cs  chronojump.cs  chronojump.desktop.in  chronojump.in  chronojumpImporter.cs  chronojump_mini.cs  chronojump_mini.in  chronopic.cs  chronopic2016.cs  chronopicDetect.cs  chronopicDialogAutoController.cs  chronopicRegister.cs  classStateAndCompare.cs  commandLineEncoder.cs  config.cs  constants.cs  encoder.cs  encoderCapture.cs  encoderCaptureInertialBG.cs  encoderRProc.cs  encoderRhythm.cs  endingConditions.cs  event.cs  eventType.cs  exclude.txt  (+78 more)
src/Mini/: Makefile.am  chronojump_mini.cs  chronojump_mini.in
src/angle/: changelog  kneeAngle.cpp  kneeAngleFunctions.cpp  kneeAngleGlobal.cpp  kneeAngleOptions.txt  kneeAngleRInside.cpp  kneeAngleUtil.cpp  (+1 more)
win32/: .gitignore  How to make a Windows package automatically.docx  How to make a Windows package manually.docx  How to make a Windows package.docx  Makefile  Makefile.am  chronojump_innosetup.iss  chronojump_innosetup.iss.in  chronojump_innosetup_x64.iss  chronojump_innosetup_x64.iss.in  chronojump_innosetup_x86.iss  chronojump_innosetup_x86.iss.in  deploy_win32.py  logchronojump.bat  package-x64.bat  package-x86.bat
(+1470 files in other folders)
