ASSEMBLY = chronojumpServer
TARGET = library
LINK = $(REF_DEP_CHRONOJUMP_SERVER)

SOURCES = \
	chronojumpServerCSharp.cs\
	BCrypt.cs\
	../src/sqlite/*.cs\
	../src/util.cs\
	../src/utilAll.cs\
	../src/utilDate.cs\
	../src/encoder.cs\
	../src/executeAuto.cs\
	../src/event.cs\
	../src/genericObjects.cs\
	../src/jump.cs\
	../src/run.cs\
	../src/person.cs\
	../src/personSession.cs\
	../src/preferences.cs\
	../src/pulse.cs\
	../src/reactionTime.cs\
	../src/session.cs\
	../src/eventType.cs\
	../src/jumpType.cs\
	../src/runType.cs\
	../src/pulseType.cs\
	../src/constants.cs\
	../src/multiChronopic.cs\
	../src/sport.cs\
	../src/log.cs\
	../src/logB.cs \
	../src/logConsoleCrayon.cs \
	../src/serverPing.cs\
	../src/serverEvaluator.cs\
	../src/oldCodeNeedToDBConvert/person.cs\
	../src/oldCodeNeedToDBConvert/personSession.cs\
	../src/oldCodeNeedToDBConvert/sqlite/*.cs
	

include $(top_srcdir)/build/build.mk

