SUBDIRS = Mini chronojump-importer

ASSEMBLY = Chronojump
TARGET = exe
LINK = $(REF_DEP_CHRONOJUMP)

SOURCES = \
	gui/chronojump.cs\
	gui/chronojumpIcons.cs\
	gui/chronojumpPersons.cs\
	gui/chronopic.cs\
	gui/chronopicRegister.cs\
	gui/confirm.cs\
	gui/cjCombo.cs\
	gui/encoder.cs\
	gui/encoderTreeviews.cs\
	gui/encoderConfiguration.cs\
	gui/encoderSelectRepetitions.cs\
	gui/encoderOverview.cs\
	gui/error.cs\
	gui/eventExecute.cs\
	gui/eventGraphConfigure.cs\
	gui/event.cs\
	gui/executeAuto.cs\
	gui/forceSensor.cs\
	gui/guiTests.cs\
	gui/jump.cs\
	gui/jumpsProfile.cs\
	gui/jumpType.cs\
	gui/restTime.cs\
	gui/run.cs\
	gui/runType.cs\
	gui/reactionTime.cs\
	gui/pulse.cs\
	gui/multiChronopic.cs\
	gui/person.cs\
	gui/personSelect.cs\
	gui/preferences.cs\
	gui/sendLog.cs\
	gui/session.cs\
	gui/stats.cs\
	gui/presentation.cs\
	gui/report.cs\
	gui/about.cs\
	gui/helpPorts.cs\
	gui/dialogMessage.cs\
	gui/dialogCalendar.cs\
	gui/dialogImageTest.cs\
	gui/dialogPersonPopup.cs\
	gui/dialogThreshold.cs\
	gui/repetitiveConditions.cs\
	gui/convertWeight.cs\
	gui/genericWindow.cs\
	gui/server.cs\
	gui/splash.cs\
	gui/sprint.cs\
	gui/dialogServerStats.cs\
	gui/evaluator.cs\
	gui/networks.cs\
	gui/queryServer.cs\
	gui/usefulObjects.cs\
	gui/trigger.cs\
	gui/old/chronojumpServerOld.cs\
	statType.cs\
	stats/main.cs\
	stats/chronojumpProfile.cs\
	stats/global.cs\
	stats/sjCmjAbk.cs\
	stats/sjCmjAbkPlus.cs\
	stats/djIndex.cs\
	stats/djPower.cs\
	stats/djQ.cs\
	stats/jumpSimpleSubtraction.cs\
	stats/rjIndex.cs\
	stats/rjPotencyBosco.cs\
	stats/rjEvolution.cs\
	stats/jumpIndexes.cs\
	stats/fv.cs\
	stats/potency.cs\
	stats/rjAVGSD.cs\
	stats/runSimple.cs\
	stats/runIntervallic.cs\
	stats/graphs/graphData.cs\
	stats/graphs/graphROptions.cs\
	stats/graphs/graphSerie.cs\
	stats/graphs/global.cs\
	stats/graphs/sjCmjAbk.cs\
	stats/graphs/sjCmjAbkPlus.cs\
	stats/graphs/djIndex.cs\
	stats/graphs/djPower.cs\
	stats/graphs/djQ.cs\
	stats/graphs/rjIndex.cs\
	stats/graphs/rjPotencyBosco.cs\
	stats/graphs/rjEvolution.cs\
	stats/graphs/jumpIndexes.cs\
	stats/graphs/fv.cs\
	stats/graphs/potency.cs\
	stats/graphs/rjAVGSD.cs\
	stats/graphs/runSimple.cs\
	stats/graphs/runIntervallic.cs\
	stats/graphs/jumpSimpleSubtraction.cs\
	sqlite/chronopicRegister.cs\
	sqlite/main.cs\
	sqlite/preferences.cs\
	sqlite/session.cs\
	sqlite/encoder.cs\
	sqlite/encoderConfiguration.cs\
	sqlite/executeAuto.cs\
	sqlite/forceSensor.cs\
	sqlite/jump.cs\
	sqlite/jumpRj.cs\
	sqlite/jumpType.cs\
	sqlite/run.cs\
	sqlite/runInterval.cs\
	sqlite/runType.cs\
	sqlite/person.cs\
	sqlite/personSession.cs\
	sqlite/personSessionNotUpload.cs\
	sqlite/stat.cs\
	sqlite/pulse.cs\
	sqlite/pulseType.cs\
	sqlite/reactionTime.cs\
	sqlite/multiChronopic.cs\
	sqlite/event.cs\
	sqlite/sport.cs\
	sqlite/speciallity.cs\
	sqlite/trigger.cs\
	sqlite/usefulObjects.cs\
	sqlite/country.cs\
	sqlite/oldConvert.cs\
	sqlite/server.cs\
	execute/event.cs\
	execute/jump.cs\
	execute/run.cs\
	execute/pulse.cs\
	execute/reactionTime.cs\
	execute/multiChronopic.cs\
	../chronojump_server/ChronojumpServer.cs\
	AssemblyInfo.cs\
	buildInfo.cs\
	chronojump.cs\
	config.cs\
	encoder.cs\
	encoderCapture.cs\
	encoderCaptureInertialBG.cs\
	encoderRhythm.cs\
	encoderRProc.cs\
	executeAuto.cs\
	event.cs\
	eventType.cs\
	FTD2XX_NET.cs\
	forceSensor.cs\
	genericObjects.cs\
	json.cs\
	jump.cs\
	jumpsProfile.cs\
	jumpType.cs\
	networks.cs\
	person.cs\
	personSession.cs\
	run.cs\
	runType.cs\
	pulse.cs\
	pulseType.cs\
	reactionTime.cs\
	reactionTimeType.cs\
	multiChronopic.cs\
	multiChronopicType.cs\
	session.cs\
	exportSession.cs\
	preferences.cs\
	restTime.cs\
	sprint.cs\
	threshold.cs\
	treeViewEvent.cs\
	treeViewPerson.cs\
	treeViewJump.cs\
	treeViewRun.cs\
	treeViewPulse.cs\
	treeViewReactionTime.cs\
	treeViewMultiChronopic.cs\
	trigger.cs\
	util.cs\
	utilAll.cs\
	utilCSV.cs\
	utilDate.cs\
	utilEncoder.cs\
	utilGtk.cs\
	utilLanguage.cs\
	utilMath.cs\
	utilMultimedia.cs\
	constants.cs\
	commandLineEncoder.cs\
	report.cs\
	sport.cs\
	log.cs\
	logB.cs\
	logConsoleCrayon.cs\
	RFID.cs\
	serverPing.cs\
	serverEvaluator.cs\
	server.cs\
	staticClassState.cs\
	chronopic.cs\
	chronopic2016.cs\
	chronopicDetect.cs\
	chronopicRegister.cs\
	chronojumpImporter.cs\
	executeProcess.cs\
	oldCodeNeedToDBConvert/person.cs\
	oldCodeNeedToDBConvert/personSession.cs\
	oldCodeNeedToDBConvert/sqlite/person.cs\
	oldCodeNeedToDBConvert/sqlite/personSession.cs\
	oldCodeNeedToDBConvert/sqlite/session.cs

RESOURCES = \
	../glade/app1.glade \
	../glade/confirm_window.glade \
	../glade/convert_weight.glade \
	../glade/dialog_about.glade \
	../glade/dialog_calendar.glade \
	../glade/dialog_help_ports.glade \
	../glade/dialog_image_test.glade \
	../glade/dialog_message.glade \
	../glade/dialog_person_popup.glade \
	../glade/dialog_server_stats.glade \
	../glade/dialog_threshold.glade \
	../glade/edit_event.glade \
	../glade/encoder_configuration.glade \
	../glade/encoder_overview.glade \
	../glade/error_window.glade \
	../glade/evaluator_window.glade \
	../glade/event_graph_configure.glade \
	../glade/execute_auto.glade \
	../glade/generic_window.glade \
	../glade/jump_type_add.glade \
	../glade/jumps_runs_more.glade \
	../glade/person_multiple_infinite.glade \
	../glade/person_recuperate.glade \
	../glade/person_select_window.glade \
	../glade/person_show_all_events.glade \
	../glade/person_win.glade \
	../glade/preferences_win.glade \
	../glade/query_server_window.glade \
	../glade/repair_sub_event.glade \
	../glade/repetitive_conditions.glade \
	../glade/report_window.glade \
	../glade/run_type_add.glade \
	../glade/session_add_edit.glade \
	../glade/session_load.glade \
	../glade/session_upload.glade \
	../glade/splash_window.glade \
	../glade/stats_select_sessions.glade \
	../images/mini/no_image.png,mini/no_image.png \
	../images/selector-jumps.png,selector-jumps.png \
	../images/selector-runs.png,selector-runs.png \
	../images/selector-encoder.png,selector-encoder.png \
	../images/selector-force.png,selector-force.png \
	../images/selector-rt.png,selector-rt.png \
	../images/selector-multichronopic.png,selector-multichronopic.png \
	../images/mini/force_sensor.png,mini/force_sensor.png \
	../images/board-unknown.png,board-unknown.png \
	../images/board-jump-run.png,board-jump-run.png \
	../images/board-encoder.png,board-encoder.png \
	../images/board-arduino-rfid.png,board-arduino-rfid.png \
	../images/board-arduino-force.png,board-arduino-force.png \
	../images/chronojump-jumps-small.png,chronojump-jumps-small.png \
	../images/chronojump-runs-small.png,chronojump-runs-small.png \
	../images/chronojump-encoder-small.png,chronojump-encoder-small.png \
	../images/chronojump-inertial.png,chronojump-inertial.png \
	../images/agility_505.png,agility_505.png\
	../images/mini/agility_505.png,mini/agility_505.png \
	../images/agility_20yard.png,agility_20yard.png\
	../images/mini/agility_20yard.png,mini/agility_20yard.png \
	../images/agility_illinois.png,agility_illinois.png\
	../images/mini/agility_illinois.png,mini/agility_illinois.png \
	../images/agility_shuttle.png,agility_shuttle.png\
	../images/mini/agility_shuttle.png,mini/agility_shuttle.png \
	../images/agility_zigzag.png,agility_zigzag.png\
	../images/mini/agility_zigzag.png,mini/agility_zigzag.png \
	../images/agility_t_test.png,agility_t_test.png \
	../images/mini/agility_t_test.png,mini/agility_t_test.png \
	../images/agility_3l3r.png,agility_3l3r.png \
	../images/mini/agility_3l3r.png,mini/agility_3l3r.png \
	../images/jump_free.png,jump_free.png\
	../images/mini/jump_free.png,mini/jump_free.png \
	../images/jump_sj.png,jump_sj.png\
	../images/mini/jump_sj.png,mini/jump_sj.png \
	../images/jump_sj_l.png,jump_sj_l.png\
	../images/mini/jump_sj_l.png,mini/jump_sj_l.png \
	../images/jump_cmj.png,jump_cmj.png\
	../images/mini/jump_cmj.png,mini/jump_cmj.png \
	../images/jump_cmj_l.png,jump_cmj_l.png\
	../images/mini/jump_cmj_l.png,mini/jump_cmj_l.png \
	../images/jump_abk.png,jump_abk.png\
	../images/mini/jump_abk.png,mini/jump_abk.png \
	../images/jump_abk_l.png,jump_abk_l.png\
	../images/mini/jump_abk_l.png,mini/jump_abk_l.png \
	../images/jump_max.png,jump_max.png\
	../images/mini/jump_max.png,mini/jump_max.png \
	../images/jump_dj.png,jump_dj.png\
	../images/mini/jump_dj.png,mini/jump_dj.png \
	../images/jump_dj_a.png,jump_dj_a.png\
	../images/mini/jump_dj_a.png,mini/jump_dj_a.png \
	../images/jump_dj_inside.png,jump_dj_inside.png\
	../images/mini/jump_dj_inside.png,mini/jump_dj_inside.png \
	../images/jump_dj_a_inside.png,jump_dj_a_inside.png\
	../images/mini/jump_dj_a_inside.png,mini/jump_dj_a_inside.png \
	../images/jump_rocket.png,jump_rocket.png \
	../images/mini/jump_rocket.png,mini/jump_rocket.png \
	../images/jump_rj.png,jump_rj.png \
	../images/mini/jump_rj.png,mini/jump_rj.png \
	../images/jump_rj_in.png,jump_rj_in.png \
	../images/mini/jump_rj_in.png,mini/jump_rj_in.png \
	../images/jump_rj_hexagon.png,jump_rj_hexagon.png \
	../images/mini/jump_rj_hexagon.png,mini/jump_rj_hexagon.png \
	../images/run_simple.png,run_simple.png \
	../images/mini/run_simple.png,mini/run_simple.png \
	../images/run_interval.png,run_interval.png \
	../images/mini/run_interval.png,mini/run_interval.png \
	../images/margaria.png,margaria.png\
	../images/mini/margaria.png,mini/margaria.png \
	../images/gesell_dbt.png,gesell_dbt.png \
	../images/mini/gesell_dbt.png,mini/gesell_dbt.png \
	../images/multiChronopic.png,multiChronopic.png \
	../images/mini/multiChronopic.png,mini/multiChronopic.png \
	../images/run_analysis.png,run_analysis.png \
	../images/mini/run_analysis.png,mini/run_analysis.png \
	../images/pulse_free.png,pulse_free.png \
	../images/mini/pulse_free.png,mini/pulse_free.png \
	../images/pulse_custom.png,pulse_custom.png \
	../images/mini/pulse_custom.png,mini/pulse_custom.png \
	../images/reaction_time.png,reaction_time.png \
	../images/mini/reaction_time.png,mini/reaction_time.png \
	../images/reaction_time_discriminative.png,reaction_time_discriminative.png \
	../images/mini/reaction_time_discriminative.png,mini/reaction_time_discriminative.png \
	../images/dj-from-out.png,dj-from-out.png \
	../images/dj-from-in.png,dj-from-in.png \
	../images/mtgug.png,mtgug.png \
	../images/mini/mtgug.png,mini/mtgug.png \
	../images/take_off.png,take_off.png \
	../images/mini/take_off.png,mini/take_off.png \
	../images/auto-by-persons.png,auto-by-persons.png \
	../images/auto-by-tests.png,auto-by-tests.png \
	../images/auto-by-series.png,auto-by-series.png \
	../images/auto-person-skip.png,auto-person-skip.png \
	../images/auto-person-remove.png,auto-person-remove.png \
	../images/chronopic.png,chronopic.png \
	../images/chronopic1.jpg,chronopic1.jpg \
	../images/mini/chronopic1.jpg,mini/chronopic1.jpg \
	../images/chronopic2.jpg,chronopic2.jpg \
	../images/mini/chronopic2.jpg,mini/chronopic2.jpg \
	../images/chronopic3.jpg,chronopic3.jpg \
	../images/mini/chronopic3.jpg,mini/chronopic3.jpg \
	../images/modular_platform_with_chronopic.jpg,modular_platform_with_chronopic.jpg \
	../images/mini/modular_platform_with_chronopic.jpg,mini/modular_platform_with_chronopic.jpg \
	../images/plataforma_contactos.jpg,plataforma_contactos.jpg\
	../images/mini/plataforma_contactos.jpg,mini/plataforma_contactos.jpg \
	../images/infrared.jpg,infrared.jpg \
	../images/mini/infrared.jpg,mini/infrared.jpg \
	../images/md/ic_notifications_blue_24dp_1x.png,stock_bell.png \
	../images/md/ic_notifications_active_blue_24dp_1x.png,stock_bell_active.png \
	../images/md/ic_notifications_none_blue_24dp_1x.png,stock_bell_none.png \
	../images/stock_bell_green.png,stock_bell_green.png \
	../images/stock_bell_red.png,stock_bell_red.png \
	../images/line_session_max.png,line_session_max.png \
	../images/line_session_avg.png,line_session_avg.png \
	../images/line_person_max.png,line_person_max.png \
	../images/line_person_max_all_sessions.png,line_person_max_all_sessions.png \
	../images/line_person_avg.png,line_person_avg.png \
	../images/audio-volume-high.png,audio-volume-high.png \
	../images/audio-volume-muted.png,audio-volume-muted.png \
	../images/chronopic_24.png,chronopic_24.png \
	../images/chronopic_128.png,chronopic_128.png \
	../images/gpm-statistics.png,gpm-statistics.png \
	../images/jumps-profile-pie.png,jumps-profile-pie.png \
	../images/spreadsheet.png,spreadsheet.png \
	../images/report_view.png,report_view.png \
	../images/preferences-system.png,preferences-system.png \
	../images/md/ic_home_blue_24dp_1x.png,image_home.png \
	../images/md/ic_import_1x.png,import.png \
	../images/md/ic_export_1x.png,export.png \
	../images/md/ic_settings_blue_24dp_1x.png,image_settings.png \
	../images/md/ic_close_red_24dp_1x.png,image_close.png \
	../images/md/ic_close_blue_24dp_2x.png,image_close_big.png \
	../images/md/ic_power_settings_new_blue_24dp_1x.png,image_quit.png \
	../images/md/ic_gravity_1x.png,image_gravity.png \
	../images/md/ic_settings_backup_restore_blue_24dp_1x.png,image_inertia.png \
	../images/md/ic_timer_blue_24dp_1x.png,image_capture.png \
	../images/md/ic_timer_blue_24dp_2x.png,image_capture_big.png \
	../images/md/ic_last_page_blue_24dp_1x.png,finish.png \
	../images/md/ic_cancel_red_24dp_1x.png,image_cancel.png \
	../images/md/ic_insert_chart_blue_24dp_1x.png,image_analyze.png \
	../images/md/ic_assignment_blue_24dp_1x.png,image_analyze_general.png \
	../images/md/ic_fast_forward_blue_24dp_1x.png,image_sprint.png \
	../images/md/ic_developer_board_blue_24dp_1x.png,image_chronopic_connect.png \
	../images/md/ic_developer_board_blue_24dp_2x.png,image_chronopic_connect_big.png \
	../images/md/ic_person_blue_24dp_1x.png,image_person.png \
	../images/md/ic_person_logout_blue_24dp_1x.png,image_person_logout.png \
	../images/md/ic_photo_camera_blue_24dp_2x.png,image_no_photo.png \
	../images/md/ic_select_blue_24dp_2x.png,image_selected.png \
	../images/md/ic_cached_blue_24dp_1x.png,image_recalculate.png \
	../images/md/ic_delete_blue_24dp_1x.png,stock_delete.png \
	../images/md/ic_create_new_folder_blue_24dp_2x.png,folder_new_big.png \
	../images/md/ic_create_new_folder_blue_24dp_1x.png,folder_new.png \
	../images/md/ic_folder_open_blue_24dp_2x.png,folder_open_big.png \
	../images/md/ic_folder_open_blue_24dp_1x.png,folder_open.png \
	../images/md/ic_visibility_blue_24dp_1x.png,image_visibility.png \
	../images/md/ic_person_pin_blue_24dp_1x.png,image_person_pin.png \
	../images/md/ic_face_blue_24dp_1x.png,image_face.png \
	../images/md/ic_person_add_blue_24dp_1x.png,image_person_add.png \
	../images/md/ic_group_add_blue_24dp_1x.png,image_group_add.png \
	../images/md/ic_person_outline_blue_24dp_1x.png,image_person_outline.png \
	../images/md/ic_people_outline_blue_24dp_1x.png,image_group_outline.png \
	../images/md/ic_weekend_blue_24dp_1x.png,image_rest.png \
	../images/md/ic_weekend_blue_inactive_24dp_1x.png,image_rest_inactive.png \
	../images/md/ic_looks_zero_blue_24dp_1x.png,zero.png \
	../images/md/ic_looks_one_blue_24dp_1x.png,one.png \
	../images/md/ic_add_circle_blue_24dp_1x.png,image_add_test.png \
	../images/md/ic_all_inclusive_blue_24dp_1x.png,cont.png \
	../images/md/ic_jump_simple_blue_24dp_1x.png,image_jump_simple.png \
	../images/md/ic_jump_reactive_blue_24dp_1x.png,image_jump_reactive.png \
	../images/md/ic_directions_run_blue_24dp_2x.png,run.png \
	../images/md/ic_directions_run_simple_blue_24dp_1x.png,image_run_simple.png \
	../images/md/ic_directions_run_multiple_blue_24dp_1x.png,image_run_multiple.png \
	../images/md/ic_directions_run_track_blue_24dp_1x.png,run_track_distance.png \
	../images/md/ic_build_blue_24dp_1x.png,image_build.png \
	../images/md/ic_edit_blue_24dp_1x.png,image_edit.png \
	../images/md/ic_add_blue_24dp_1x.png,image_add.png \
	../images/md/ic_info_outline_blue_24dp_1x.png,image_info.png \
	../images/md/ic_fitness_center_blue_24dp_1x.png,image_exercise.png \
	../images/md/ic_keyboard_arrow_up_blue_24dp_1x.png,image_up.png \
	../images/md/ic_keyboard_arrow_down_blue_24dp_1x.png,image_down.png \
	../images/md/inertial_rolled.png,inertial_rolled.png \
	../images/md/inertial_half_rolled.png,inertial_half_rolled.png \
	../images/md/inertial_extended.png,inertial_extended.png \
	../images/md/calibrate.png,calibrate.png \
	../images/md/ic_folder_check_blue_24dp_1x.png,folder_check.png \
	../images/md/ic_zoom_blue_24dp_1x.png,zoom.png \
	../images/md/trigger_2x.png,image_encoder_triggers.png \
	../images/md/trigger_no_2x.png,image_encoder_triggers_no.png \
	../images/chronojump_icon.png,chronojump_icon.png \
	../images/chronojump_icon_graph.png,chronojump_icon_graph.png \
	../images/stock_right.png,stock_right.png \
	../images/stock_right_left.png,stock_right_left.png \
	../images/stock_up.png,stock_up.png \
	../images/stock_up_down.png,stock_up_down.png \
	../images/stock_down.png,stock_down.png \
	../images/stock_inertial.png,stock_inertial.png \
	../images/reaction_time_menu.png,reaction_time_menu.png \
	../images/pulse_menu.png,pulse_menu.png \
	../images/multichronopic_menu.png,multichronopic_menu.png \
	../images/force_sensor_menu.png,force_sensor_menu.png \
	../images/gtk-apply.png,gtk-apply.png \
	../images/gtk-cancel.png,gtk-cancel.png \
	../images/gtk-zoom-fit.png,gtk-zoom-fit.png \
	../images/gtk-zoom-in.png,gtk-zoom-in.png \
	../images/gtk-zoom-in-with-text.png,gtk-zoom-in-with-text.png \
	../images/gtk-new-1.png,gtk-new-1.png \
	../images/gtk-new-plus.png,gtk-new-plus.png \
	../images/gtk-open.png,gtk-open.png \
	../images/gtk-open-1.png,gtk-open-1.png \
	../images/gtk-open-plus.png,gtk-open-plus.png \
	../images/import-csv-noheaders.png,import-csv-noheaders.png \
	../images/import-csv-headers.png,import-csv-headers.png \
	../images/import-csv-name-1-column.png,import-csv-name-1-column.png \
	../images/import-csv-name-2-columns.png,import-csv-name-2-columns.png \
	../images/calendar.png,calendar.png \
	../images/chronojump-logo-transparent.png,chronojump-logo-transparent.png \
	../images/chronojump-logo-2013_320.png,chronojump-logo-2013_320.png \
	../images/chronojump-logo-2013.png,chronojump-logo-2013.png \
	../images/muscle-concentric.png,muscle-concentric.png \
	../images/extra-mass.png,extra-mass.png \
	../images/muscle-excentric-concentric.png,muscle-excentric-concentric.png \
	../images/laterality-both.png,laterality-both.png \
	../images/laterality-right.png,laterality-right.png \
	../images/laterality-left.png,laterality-left.png \
	../images/encoder-analyze-individual-current-set.png,encoder-analyze-individual-current-set.png \
	../images/encoder-analyze-individual-current-session.png,encoder-analyze-individual-current-session.png \
	../images/encoder-analyze-individual-all-sessions.png,encoder-analyze-individual-all-sessions.png \
	../images/encoder-analyze-groupal-current-session.png,encoder-analyze-groupal-current-session.png \
	../images/encoder-analyze-powerbars.png,encoder-analyze-powerbars.png \
	../images/encoder-analyze-cross.png,encoder-analyze-cross.png \
	../images/encoder-analyze-1RM.png,encoder-analyze-1RM.png \
	../images/encoder-analyze-side.png,encoder-analyze-side.png \
	../images/encoder-analyze-single.png,encoder-analyze-single.png \
	../images/encoder-analyze-nmp.png,encoder-analyze-nmp.png \
	../images/encoder-analyze-eccon-together.png,encoder-analyze-eccon-together.png \
	../images/encoder-analyze-eccon-separated.png,encoder-analyze-eccon-separated.png \
	../images/encoder-analyze-speed.png,encoder-analyze-speed.png \
	../images/encoder-analyze-accel.png,encoder-analyze-accel.png \
	../images/encoder-analyze-force.png,encoder-analyze-force.png \
	../images/encoder-analyze-power.png,encoder-analyze-power.png \
	../images/encoder-analyze-mean.png,encoder-analyze-mean.png \
	../images/encoder-analyze-max.png,encoder-analyze-max.png \
	../images/encoder-analyze-range.png,encoder-analyze-range.png \
	../images/encoder-analyze-time-to-pp.png,encoder-analyze-time-to-pp.png \
	../images/encoder-image-pending.png,encoder-image-pending.png \
	../images/encoder-linear.png,encoder-linear.png \
	../images/encoder-rotary-friction.png,encoder-rotary-friction.png \
	../images/encoder-rotary-axis.png,encoder-rotary-axis.png \
	../images/encoder-linear-blue.png,encoder-linear-blue.png \
	../images/encoder-rotary-friction-blue.png,encoder-rotary-friction-blue.png \
	../images/encoder-rotary-axis-blue.png,encoder-rotary-axis-blue.png \
	../images/encoder-linear-free-weight.png,encoder-linear-free-weight.png \
	../images/encoder-linear-free-weight-inv.png,encoder-linear-free-weight-inv.png \
	../images/encoder-linear-inertial.png,encoder-linear-inertial.png \
	../images/encoder-linear-on-person-weighted-moving-pulley1.png,encoder-linear-on-person-weighted-moving-pulley1.png \
	../images/encoder-linear-inv-on-person-weighted-moving-pulley1.png,encoder-linear-inv-on-person-weighted-moving-pulley1.png \
	../images/encoder-linear-on-person-weighted-moving-pulley2.png,encoder-linear-on-person-weighted-moving-pulley2.png \
	../images/encoder-linear-inv-on-person-weighted-moving-pulley2.png,encoder-linear-inv-on-person-weighted-moving-pulley2.png \
	../images/encoder-linear-on-weighted-moving-pulley.png,encoder-linear-on-weighted-moving-pulley.png \
	../images/encoder-linear-inclined-plane.png,encoder-linear-inclined-plane.png \
	../images/encoder-linear-inclined-plane-weight-diff-angle.png,encoder-linear-inclined-plane-weight-diff-angle.png \
	../images/encoder-linear-inclined-plane-weight-diff-angle-mov-pulley.png,encoder-linear-inclined-plane-weight-diff-angle-mov-pulley.png \
	../images/encoder-rotary-friction-pulley.png,encoder-rotary-friction-pulley.png \
	../images/encoder-rotary-friction-pulley-axis.png,encoder-rotary-friction-pulley-axis.png \
	../images/encoder-rotary-friction-side-inertial.png,encoder-rotary-friction-side-inertial.png \
	../images/encoder-rotary-friction-axis-inertial.png,encoder-rotary-friction-axis-inertial.png \
	../images/encoder-rotary-friction-side-inertial-lateral.png,encoder-rotary-friction-side-inertial-lateral.png \
	../images/encoder-rotary-friction-axis-inertial-lateral.png,encoder-rotary-friction-axis-inertial-lateral.png \
	../images/encoder-rotary-friction-side-inertial-mov-pulley.png,encoder-rotary-friction-side-inertial-mov-pulley.png \
	../images/encoder-rotary-friction-axis-inertial-mov-pulley.png,encoder-rotary-friction-axis-inertial-mov-pulley.png \
	../images/encoder-rotary-friction-on-fixed-pulley-with-weighted-moving-pulley.png,encoder-rotary-friction-on-fixed-pulley-with-weighted-moving-pulley.png \
	../images/encoder-rotary-axis-pulley-axis.png,encoder-rotary-axis-pulley-axis.png \
	../images/encoder-rotary-axis-inertial.png,encoder-rotary-axis-inertial.png \
	../images/encoder-rotary-axis-inertial-lateral.png,encoder-rotary-axis-inertial-lateral.png \
	../images/encoder-rotary-axis-inertial-mov-pulley.png,encoder-rotary-axis-inertial-mov-pulley.png \
	../images/encoder-rotary-axis-inertial-mov-pulley-lateral.png,encoder-rotary-axis-inertial-mov-pulley-lateral.png \
	../images/encoder-calcule-im.png,encoder-calcule-im.png \
	../images/encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png,encoder-rotary-axis-on-fixed-pulley-with-weighted-moving-pulley.png \
	../images/inertial-start.png,inertial-start.png \
	../images/123804__kendallbear__kendallklap1.wav,sound_can_start.wav \
	../images/135936__bradwesson__collectcoin.wav,135936__bradwesson__collectcoin.wav \
	../images/142608__autistic-lucario__error.wav,sound_bad.wav

IMAGES = $(top_srcdir)/images/chronojump-logo-2013.png \
         $(top_srcdir)/images/chronojump-logo-2013_320.png \
         $(top_srcdir)/images/123804__kendallbear__kendallklap1.wav \
         $(top_srcdir)/images/135936__bradwesson__collectcoin.wav \
         $(top_srcdir)/images/142608__autistic-lucario__error.wav \
         $(top_srcdir)/images/report_web_style.css

LOGO = $(top_srcdir)/images/svg/chronojump_icon.svg

bin_SCRIPTS = chronojump

DESKTOP_FILE = chronojump.desktop.in

include $(top_srcdir)/build/build.mk

EXTRA_DIST += \
	chronojump.in \
	AssemblyInfo.cs.in \
	../images/report_web_style.css \
	$(top_srcdir)/src/angle/*

